# casbin-rs

./: Cargo.toml  README.md
examples/: rbac_model.conf
src/: assertion.rs  config.rs  effect.rs  enforcer.rs  error.rs  lib.rs  model.rs  persist.rs  policy.rs  rbac.rs  util.rs
src/config/: config.rs
src/effect/: effector.rs
src/enforcer/: internal_api.rs  management_api.rs  rbac_api.rs
src/model/: assertion.rs  function.rs  model.rs  policy.rs
src/persist/: adapter.rs  file_adapter.rs
src/rbac/: default_role_manager.rs  role.rs  role_manager.rs
src/util/: builtin_operators.rs
test_data/: testini.ini
